# nengine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
examples/: toy_example.rs
nate-engine-core/: Cargo.toml
nate-engine-core/src/: lib.rs  system_wrapper.rs
nate-engine-macros/: Cargo.toml
nate-engine-macros/examples/: assign_world.rs  big_world.rs  filter_world.rs  singular_world.rs  small_world.rs
nate-engine-macros/src/: lib.rs
nengine/: Cargo.toml
nengine-macros/: Cargo.toml
nengine-macros/examples/: assign_world.rs  big_world.rs  filter_world.rs  singular_world.rs  small_world.rs
nengine-macros/src/: lib.rs
nengine/src/: lib.rs  renderer.rs
src/: lib.rs  main.rs
