[package]
name = "nate-engine"
version = "0.1.2"
edition = "2021"
authors = ["Nathaniel Wert <n8.wert.b@gmail.com>"]
description = "Fun High Level ECS Game Engine I Wrote"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "nate-engine-core",
    "nate-engine-macros"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nate-engine-core = "0.1.0"
nate-engine-macros = "0.1.2"


[dev-dependencies]
rand = "0.8.5"
ratatui = "0.26.2"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
