[package]
name = "nate-engine-core"
version = "0.1.2"
edition = "2021"
authors = ["Nathaniel Wert <n8.wert.b@gmail.com>"]
description = "Core Code for a game engine I created just for fun"
readme = "../README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.4"
threadpool = "1.8.1"
