[package]
name = "nate-engine-macros"
version = "0.1.0"
edition = "2021"
authors = ["Nathaniel Wert <n8.wert.b@gmail.com>"]
description = "Macros for a game engine I created just for fun"
readme = "../REAMDE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full", "extra-traits"] }

[dev-dependencies]
rand = "0.8.5"
